feat: initial completion